[gd_scene load_steps=8 format=3 uid="uid://14nd8yy5f85e"]

[ext_resource type="Script" path="res://ui/widgets/slider/slider.gd" id="1_pmqkv"]
[ext_resource type="LabelSettings" uid="uid://b5j6mwf5fenb7" path="res://ui/themes/info_label.tres" id="1_q4se0"]
[ext_resource type="Texture2D" uid="uid://cnvtq4stuilwc" path="res://ui/widgets/slider/slider_bar.png" id="2_gng5j"]
[ext_resource type="Texture2D" uid="uid://bntgf7isxk720" path="res://ui/widgets/slider/carrot.png" id="3_s1jp2"]
[ext_resource type="FontFile" uid="uid://snyn22t7m35t" path="res://ui/fonts/Oxanium-Bold.ttf" id="4_7r54r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45e6v"]
bg_color = Color(0.166667, 0.5, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u1ia7"]
font = ExtResource("4_7r54r")
font_color = Color(0.0745098, 0.0745098, 0.0980392, 1)

[node name="PumpSlider" type="VBoxContainer"]
script = ExtResource("1_pmqkv")

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
text = "PUMP SPEED"
label_settings = ExtResource("1_q4se0")
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = 20

[node name="SliderBar" type="NinePatchRect" parent="MarginContainer"]
z_index = 1
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_gng5j")
patch_margin_left = 4
patch_margin_top = 64
patch_margin_right = 4

[node name="GreenSection" type="Panel" parent="MarginContainer/SliderBar"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_45e6v")

[node name="BottomCarrot" type="TextureRect" parent="MarginContainer/SliderBar"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.54
anchor_top = 0.5
anchor_right = 0.54
anchor_bottom = 0.5
offset_top = 2.0
offset_right = 16.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_s1jp2")

[node name="Label" type="Label" parent="MarginContainer/SliderBar/BottomCarrot"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "D"
label_settings = SubResource("LabelSettings_u1ia7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopCarrot" type="TextureRect" parent="MarginContainer/SliderBar"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.5
anchor_right = 0.51
anchor_bottom = 0.5
offset_top = -2.0
offset_right = 16.0
grow_horizontal = 2
scale = Vector2(0.5, -0.5)
texture = ExtResource("3_s1jp2")

[node name="Label" type="Label" parent="MarginContainer/SliderBar/TopCarrot"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "H"
label_settings = SubResource("LabelSettings_u1ia7")
horizontal_alignment = 1
vertical_alignment = 1
